crates/ruff_python_parser/tests/snapshots/invalid_syntax@param_with_invalid_annotation.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/param_with_invalid_annotation.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..81,
        body: [
            FunctionDef(
                StmtFunctionDef {
                    node_index: NodeIndex(None),
                    range: 0..23,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 4..7,
                        node_index: NodeIndex(None),
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 7..18,
                        node_index: NodeIndex(None),
                        posonlyargs: [],
                        args: [
                            ParameterWithDefault {
                                range: 8..17,
                                node_index: NodeIndex(None),
                                parameter: Parameter {
                                    range: 8..17,
                                    node_index: NodeIndex(None),
                                    name: Identifier {
                                        id: Name("arg"),
                                        range: 8..11,
                                        node_index: NodeIndex(None),
                                    },
                                    annotation: Some(
                                        Starred(
                                            ExprStarred {
                                                node_index: NodeIndex(None),
                                                range: 13..17,
                                                value: Name(
                                                    ExprName {
                                                        node_index: NodeIndex(None),
                                                        range: 14..17,
                                                        id: Name("int"),
                                                        ctx: Load,
                                                    },
                                                ),
                                                ctx: Load,
                                            },
                                        ),
                                    ),
                                    is_context: false,
                                },
                                default: None,
                            },
                        ],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 20..23,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 20..23,
                                    },
                                ),
                            },
                        ),
                    ],
                    is_trailing_lambda: false,
                },
            ),
            FunctionDef(
                StmtFunctionDef {
                    node_index: NodeIndex(None),
                    range: 24..52,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 28..31,
                        node_index: NodeIndex(None),
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 31..47,
                        node_index: NodeIndex(None),
                        posonlyargs: [],
                        args: [
                            ParameterWithDefault {
                                range: 32..46,
                                node_index: NodeIndex(None),
                                parameter: Parameter {
                                    range: 32..46,
                                    node_index: NodeIndex(None),
                                    name: Identifier {
                                        id: Name("arg"),
                                        range: 32..35,
                                        node_index: NodeIndex(None),
                                    },
                                    annotation: Some(
                                        Yield(
                                            ExprYield {
                                                node_index: NodeIndex(None),
                                                range: 37..46,
                                                value: Some(
                                                    Name(
                                                        ExprName {
                                                            node_index: NodeIndex(None),
                                                            range: 43..46,
                                                            id: Name("int"),
                                                            ctx: Load,
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                    ),
                                    is_context: false,
                                },
                                default: None,
                            },
                        ],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 49..52,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 49..52,
                                    },
                                ),
                            },
                        ),
                    ],
                    is_trailing_lambda: false,
                },
            ),
            FunctionDef(
                StmtFunctionDef {
                    node_index: NodeIndex(None),
                    range: 53..80,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 57..60,
                        node_index: NodeIndex(None),
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 60..75,
                        node_index: NodeIndex(None),
                        posonlyargs: [],
                        args: [
                            ParameterWithDefault {
                                range: 61..67,
                                node_index: NodeIndex(None),
                                parameter: Parameter {
                                    range: 61..67,
                                    node_index: NodeIndex(None),
                                    name: Identifier {
                                        id: Name("arg"),
                                        range: 61..64,
                                        node_index: NodeIndex(None),
                                    },
                                    annotation: Some(
                                        Name(
                                            ExprName {
                                                node_index: NodeIndex(None),
                                                range: 66..67,
                                                id: Name("x"),
                                                ctx: Load,
                                            },
                                        ),
                                    ),
                                    is_context: false,
                                },
                                default: None,
                            },
                            ParameterWithDefault {
                                range: 71..74,
                                node_index: NodeIndex(None),
                                parameter: Parameter {
                                    range: 71..74,
                                    node_index: NodeIndex(None),
                                    name: Identifier {
                                        id: Name("int"),
                                        range: 71..74,
                                        node_index: NodeIndex(None),
                                    },
                                    annotation: None,
                                    is_context: false,
                                },
                                default: None,
                            },
                        ],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 77..80,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 77..80,
                                    },
                                ),
                            },
                        ),
                    ],
                    is_trailing_lambda: false,
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | def foo(arg: *int): ...
  |              ^^^^ Syntax Error: Starred expression cannot be used here
2 | def foo(arg: yield int): ...
3 | def foo(arg: x := int): ...
  |


  |
1 | def foo(arg: *int): ...
2 | def foo(arg: yield int): ...
  |              ^^^^^^^^^ Syntax Error: Yield expression cannot be used here
3 | def foo(arg: x := int): ...
  |


  |
1 | def foo(arg: *int): ...
2 | def foo(arg: yield int): ...
3 | def foo(arg: x := int): ...
  |                ^^ Syntax Error: Expected `,`, found `:=`
  |


## Semantic Syntax Errors

  |
1 | def foo(arg: *int): ...
2 | def foo(arg: yield int): ...
  |              ^^^^^^^^^ Syntax Error: yield expression cannot be used within a type annotation
3 | def foo(arg: x := int): ...
  |
